@@ -1,3 +1,4 @@
 0.0.0       :: 2023-12-15 :: start
 email-0.0.0 :: 2023-12-16 :: same as 0.0.0
+email-0.0.1 ::            :: lighter? removed chromedriver
 
